frontend/deploy/moneycolfrontend/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { template "name" . } }
  labels:
    app: { { template "name" . } }
    chart: { { template "chart" . } }
    release: { { .Release.Name } }
    heritage: { { .Release.Service } }
spec:
  selector:
    app: { { template "name" . } }
  ports:
    - name: http
      port: 80
      targetPort: 5080
  type: ClusterIP
